style.css
* {
    margin: 0;
    padding: 0;
}

body {
    background-color: rgb(255, 255, 255);
    height: 100%;
    width: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden;
}

/** Header */
header {
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    position: absolute;
    display: flex;
    color: rgb(152, 214, 214);
    font-size: 220%;
    justify-content: space-between;
    padding-bottom: 10px;
    top: 0;
    left: 0;
    width: 100%;
    height: 70px;
    background-color: rgb(56, 56, 56);
    

}

/** Header Title */
.title {
    background-color: rgb(195, 255, 255);
    text-align: right;
    padding-right: 10px;
    vertical-align: middle;
    margin-top: 25px;
    width: 200px;
    right: 0px;
    color: rgb(56, 56, 56)
}


/** Nav Bar */
span.nav {
    right: 0;
    width: 600px;
    display: flex;
    justify-content: center;
}

ul.nav {
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    color: rgb(195, 255, 255);
    font-size: 14pt;
    font-weight: bold;
    list-style-type: none;
    margin-top: 30px;
}

li {
    display: inline;
    padding-left: 20px;
}

/** Image Bar */
.image {
    width: 2000px;
    height: 300px;
    overflow: hidden;

}

/* image-bar .subtitle   */
.subtitle {
    background-color: rgb(195, 255, 255);
    position: absolute;
    text-align: center;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    font-size: 30px;
    top: 245px;
    bottom: 8px;
    right: 40px;
    height: 40px;
    width: 150px;
    color: rgb(56, 56, 56)
}



/** Main Sections */
div.section {
    margin-top: 75px;
    margin-left: 100px;
    width: 100%;
    display: inline-block;
    color: rgb(56, 56, 56);
    ;
    margin-right: 20px;
}

div.section .heading {
    float: left;
    font-family: 'Arial';
    font-size: 50pt;
    text-align: right;
    padding-right: 10px;
    border-right: rgb(56, 56, 56) solid 4px;
    height: 250px;
    width: 185px;
    padding-right: 15px;
}

div.section .content {
    word-wrap: break-word;
    padding-left: 250px;
    width: 55%;

}

div.section .work-heading {
    float: left;
    font-family: 'Arial';
    font-size: 50pt;
    text-align: right;
    padding-right: 10px;
    border-right: rgb(56, 56, 56) solid 4px;
    height: 1600px;
    width: 185px;
    padding-right: 15px;
}

.work-image-box {
    position: relative;
    height: 100px;
    width: 100px;
    padding: 0px;
    margin: 0px;
}

.work-image {
    position: absolute;
    width: 688px;
    height: 550px;
    left: 250px;
    border: 7px solid rgb(123, 179, 179);
}

